--- a/db-client/adminerevo/compose.yaml
+++ b/db-client/adminerevo/compose.yaml
@@ -1,7 +1,7 @@
 services:
     adminerevo:
         container_name: adminerevo
-        image: ghcr.io/shyim/adminerevo:latest
+        image: ghcr.io/shyim/adminerevo
         restart: unless-stopped
         # user: "${UID:-1000}:${GID:-1000}"
         environment:
