--- a/reverse-proxy/caddy-labels/compose.yaml
+++ b/reverse-proxy/caddy-labels/compose.yaml
@@ -14,7 +14,7 @@ services:
         networks:
             main:
         volumes:
-            - /var/run/docker.sock:/var/run/docker.sock
+            - /var/run/docker.sock:/var/run/docker.sock:ro
             - caddy-labels-data:/data
             - caddy-labels-config:/config
         labels:
