--- a/db-server/mysql/compose.yaml
+++ b/db-server/mysql/compose.yaml
@@ -16,7 +16,7 @@ services:
         volumes:
             - mysql-data:/var/lib/mysql
             - mysql-conf:/etc/mysql
-            - ./docker/mysql/bin/backup.sh:/bin/backup.sh
+            - ./docker/mysql/bin/backup.sh:/bin/backup.sh:ro
             - ${BACKUP_DIR:-${HOME}/data/backups/docker/mysql}:/backup
         labels:
             deck-chores.mysql.command: "/bin/backup.sh"
