--- a/db-server/postgres/compose.yaml
+++ b/db-server/postgres/compose.yaml
@@ -14,7 +14,7 @@ services:
             main:
         volumes:
             - postgres:/var/lib/postgresql/data
-            - ./docker/postgres/bin/backup.sh:/bin/backup.sh
+            - ./docker/postgres/bin/backup.sh:/bin/backup.sh:ro
             - ${BACKUP_DIR:-${HOME}/data/backups/docker/postgres}:/backup
         labels:
             deck-chores.postgres.command: "/bin/backup.sh"
