--- a/other/open-webui/compose.yaml
+++ b/other/open-webui/compose.yaml
@@ -1,7 +1,7 @@
 services:
     open-webui:
         container_name: open-webui
-        image: ghcr.io/open-webui/open-webui:latest
+        image: ghcr.io/open-webui/open-webui
         restart: unless-stopped
         # user: "${UID:-1000}:${GID:-1000}"
         environment:
