--- a/other/open-webui/compose.yaml
+++ b/other/open-webui/compose.yaml
@@ -15,11 +15,11 @@ services:
         labels:
             - "traefik.enable=true"
             - "traefik.http.services.open-webui.loadbalancer.server.port=8080"
-            - "traefik.http.routers.open-webui.rule=Host(`${DOMAIN:-open-webui.local}`)"
+            - "traefik.http.routers.open-webui.rule=Host(`${DOMAIN:-open-webui.localhost}`)"
             - "traefik.http.routers.open-webui.entrypoints=http"
             - "traefik.http.routers.open-webui.tls=false"
             - "traefik.http.routers.open-webui.service=open-webui"
-            - "traefik.http.routers.open-webui-secure.rule=Host(`${DOMAIN:-open-webui.local}`)"
+            - "traefik.http.routers.open-webui-secure.rule=Host(`${DOMAIN:-open-webui.localhost}`)"
             - "traefik.http.routers.open-webui-secure.entrypoints=https"
             - "traefik.http.routers.open-webui-secure.tls=true"
             - "traefik.http.routers.open-webui-secure.service=open-webui"
