--- a/db-client/adminerevo/compose.yaml
+++ b/db-client/adminerevo/compose.yaml
@@ -13,11 +13,11 @@ services:
         labels:
             - "traefik.enable=true"
             - "traefik.http.services.adminerevo.loadbalancer.server.port=8080"
-            - "traefik.http.routers.adminerevo.rule=Host(`${DOMAIN:-adminerevo.local}`)"
+            - "traefik.http.routers.adminerevo.rule=Host(`${DOMAIN:-adminerevo.localhost}`)"
             - "traefik.http.routers.adminerevo.entrypoints=http"
             - "traefik.http.routers.adminerevo.tls=false"
             - "traefik.http.routers.adminerevo.service=adminerevo"
-            - "traefik.http.routers.adminerevo-secure.rule=Host(`${DOMAIN:-adminerevo.local}`)"
+            - "traefik.http.routers.adminerevo-secure.rule=Host(`${DOMAIN:-adminerevo.localhost}`)"
             - "traefik.http.routers.adminerevo-secure.entrypoints=https"
             - "traefik.http.routers.adminerevo-secure.tls=true"
             - "traefik.http.routers.adminerevo-secure.service=adminerevo"
