--- a/db-client/pgadmin/compose.yaml
+++ b/db-client/pgadmin/compose.yaml
@@ -13,11 +13,11 @@ services:
         labels:
             - "traefik.enable=true"
             - "traefik.http.services.pgadmin.loadbalancer.server.port=80"
-            - "traefik.http.routers.pgadmin.rule=Host(`${DOMAIN:-pgadmin.local}`)"
+            - "traefik.http.routers.pgadmin.rule=Host(`${DOMAIN:-pgadmin.localhost}`)"
             - "traefik.http.routers.pgadmin.entrypoints=http"
             - "traefik.http.routers.pgadmin.tls=false"
             - "traefik.http.routers.pgadmin.service=pgadmin"
-            - "traefik.http.routers.pgadmin-secure.rule=Host(`${DOMAIN:-pgadmin.local}`)"
+            - "traefik.http.routers.pgadmin-secure.rule=Host(`${DOMAIN:-pgadmin.localhost}`)"
             - "traefik.http.routers.pgadmin-secure.entrypoints=https"
             - "traefik.http.routers.pgadmin-secure.tls=true"
             - "traefik.http.routers.pgadmin-secure.service=pgadmin"
