--- a/other/mailpit/compose.yaml
+++ b/other/mailpit/compose.yaml
@@ -14,11 +14,11 @@ services:
         labels:
             - "traefik.enable=true"
             - "traefik.http.services.mailpit.loadbalancer.server.port=8025"
-            - "traefik.http.routers.mailpit.rule=Host(`${DOMAIN:-mailpit.local}`)"
+            - "traefik.http.routers.mailpit.rule=Host(`${DOMAIN:-mailpit.localhost}`)"
             - "traefik.http.routers.mailpit.entrypoints=http"
             - "traefik.http.routers.mailpit.tls=false"
             - "traefik.http.routers.mailpit.service=mailpit"
-            - "traefik.http.routers.mailpit-secure.rule=Host(`${DOMAIN:-mailpit.local}`)"
+            - "traefik.http.routers.mailpit-secure.rule=Host(`${DOMAIN:-mailpit.localhost}`)"
             - "traefik.http.routers.mailpit-secure.entrypoints=https"
             - "traefik.http.routers.mailpit-secure.tls=true"
             - "traefik.http.routers.mailpit-secure.service=mailpit"
