--- a/other/portainer/compose.yaml
+++ b/other/portainer/compose.yaml
@@ -15,11 +15,11 @@ services:
         labels:
             - "traefik.enable=true"
             - "traefik.http.services.portainer.loadbalancer.server.port=9000"
-            - "traefik.http.routers.portainer.rule=Host(`${DOMAIN:-portainer.local}`)"
+            - "traefik.http.routers.portainer.rule=Host(`${DOMAIN:-portainer.localhost}`)"
             - "traefik.http.routers.portainer.entrypoints=http"
             - "traefik.http.routers.portainer.tls=false"
             - "traefik.http.routers.portainer.service=portainer"
-            - "traefik.http.routers.portainer-secure.rule=Host(`${DOMAIN:-portainer.local}`)"
+            - "traefik.http.routers.portainer-secure.rule=Host(`${DOMAIN:-portainer.localhost}`)"
             - "traefik.http.routers.portainer-secure.entrypoints=https"
             - "traefik.http.routers.portainer-secure.tls=true"
             - "traefik.http.routers.portainer-secure.service=portainer"
