--- a/mail/client/mailpit/compose.yaml
+++ b/mail/client/mailpit/compose.yaml
@@ -9,6 +9,7 @@ services:
         ports:
             # - ${MAILPIT_PORT:-8025}:8025
             - ${MAILPIT_SMTP_PORT:-1025}:1025
+        hostname: "${DOMAIN:-mailpit.localhost}"
         networks:
             main:
         volumes:
