--- a/reverse-proxy/traefik/compose.example.yaml
+++ b/reverse-proxy/traefik/compose.example.yaml
@@ -6,6 +6,7 @@ services:
         # user: "${UID:-1000}:${GID:-1000}"
         environment:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
+        hostname: "${DOMAIN:-whoami.localhost}"
         networks:
             main:
         labels:
