--- a/apps/open-webui/compose.yaml
+++ b/apps/open-webui/compose.yaml
@@ -9,6 +9,7 @@ services:
             OLLAMA_BASE_URL: "${OLLAMA_BASE_URL:-http://ollama:11434}"
         # ports:
         #     - ${OPEN_WEBUI_PORT:-3000}:8080
+        hostname: "${DOMAIN:-open-webui.localhost}"
         networks:
             main:
         volumes:
