--- a/db/client/phpmyadmin/compose.yaml
+++ b/db/client/phpmyadmin/compose.yaml
@@ -9,6 +9,7 @@ services:
             PMA_ARBITRARY: ${PMA_ARBITRARY:-1}
         # ports:
         #     - ${PHPMYADMIN_PORT:-8080}:80
+        hostname: "${DOMAIN:-phpmyadmin.localhost}"
         networks:
             main:
         labels:
