--- a/reverse-proxy/traefik/compose.yaml
+++ b/reverse-proxy/traefik/compose.yaml
@@ -10,6 +10,7 @@ services:
             - 80:80
             - 443:443
             - 5173:5173
+        hostname: "${DOMAIN:-reverse-proxy.localhost}"
         networks:
             main:
         volumes:
