--- a/docker/portainer/compose.yaml
+++ b/docker/portainer/compose.yaml
@@ -1,7 +1,7 @@
 services:
     portainer:
         container_name: portainer
-        image: portainer/portainer-ce:lts
+        image: portainer/portainer-ce:alpine
         restart: unless-stopped
         # user: "${UID:-1000}:${GID:-1000}"
         environment:
