--- a/apps/bookstack/compose.yaml
+++ b/apps/bookstack/compose.yaml
@@ -8,7 +8,7 @@ services:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
             APP_URL: "${APP_URL:-https://${DOMAIN:-bookstack.localhost}}"
             APP_KEY: "${APP_KEY:-secret}"
-            DB_HOST: "${DB_HOST:-mysql}"
+            DB_HOST: "${DB_HOST:-mariadb}"
             DB_PORT: "${DB_PORT:-3306}"
             DB_USERNAME: "${DB_USERNAME:-bookstack}"
             DB_PASSWORD: "${DB_PASSWORD:-bookstack}"
