--- a/apps/affine/compose.yaml
+++ b/apps/affine/compose.yaml
@@ -10,6 +10,7 @@ services:
         environment:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
             REDIS_SERVER_HOST: "${REDIS_SERVER_HOST:-valkey}"
+            REDIS_SERVER_PASSWORD: "${REDIS_SERVER_PASSWORD:-zaq1@WSX}"
             DATABASE_URL: "${DATABASE_URL:-postgresql://affine:affine@postgres:5432/affine}"
             AFFINE_INDEXER_ENABLED: "${AFFINE_INDEXER_ENABLED:-true}"
             AFFINE_SERVER_HTTPS: "${AFFINE_SERVER_HTTPS:-true}"
@@ -42,10 +43,13 @@ services:
         environment:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
             REDIS_SERVER_HOST: "${REDIS_SERVER_HOST:-valkey}"
+            REDIS_SERVER_PASSWORD: "${REDIS_SERVER_PASSWORD:-zaq1@WSX}"
             DATABASE_URL: "${DATABASE_URL:-postgresql://affine:affine@postgres:5432/affine}"
             AFFINE_INDEXER_ENABLED: "${AFFINE_INDEXER_ENABLED:-true}"
             AFFINE_SERVER_HTTPS: "${AFFINE_SERVER_HTTPS:-true}"
             AFFINE_SERVER_HOST: "${AFFINE_SERVER_HOST:-affine.localhost}"
+        networks:
+            main:
         volumes:
             - affine-storage:/root/.affine/storage
             - affine-conf:/root/.affine/config
