--- a/db/server/postgres/compose.yaml
+++ b/db/server/postgres/compose.yaml
@@ -7,7 +7,7 @@ services:
         environment:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
             POSTGRES_USER: "${DB_USER:-root}"
-            POSTGRES_PASSWORD: "${DB_PASSWORD:-zaq1@WSX}"
+            POSTGRES_PASSWORD: "${DB_PASSWORD:-secret}"
             POSTGRES_DB: "${DB_NAME:-default}"
         ports:
             - ${DB_PORT:-5432}:5432
