--- a/db/server/valkey/compose.yaml
+++ b/db/server/valkey/compose.yaml
@@ -3,7 +3,7 @@ services:
         container_name: valkey
         image: valkey/valkey:alpine
         restart: unless-stopped
-        command: valkey-server --save 60 1 --loglevel warning --requirepass zaq1@WSX
+        command: valkey-server --save 60 1 --loglevel warning --requirepass secret
         # user: "${UID:-1000}:${GID:-1000}"
         environment:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
