--- a/db/server/redis/compose.yaml
+++ b/db/server/redis/compose.yaml
@@ -3,7 +3,7 @@ services:
         container_name: redis
         image: redis:alpine
         restart: unless-stopped
-        command: redis-server --save 60 1 --loglevel warning --requirepass zaq1@WSX
+        command: redis-server --save 60 1 --loglevel warning --requirepass secret
         # user: "${UID:-1000}:${GID:-1000}"
         environment:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
