--- a/apps/affine/compose.yaml
+++ b/apps/affine/compose.yaml
@@ -10,9 +10,10 @@ services:
         environment:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
             REDIS_SERVER_HOST: "${REDIS_SERVER_HOST:-valkey}"
+            REDIS_SERVER_USERNAME: "${REDIS_SERVER_USERNAME:-root}"
             REDIS_SERVER_PASSWORD: "${REDIS_SERVER_PASSWORD:-secret}"
             DATABASE_URL: "${DATABASE_URL:-postgresql://affine:affine@postgres:5432/affine}"
-            AFFINE_INDEXER_ENABLED: "${AFFINE_INDEXER_ENABLED:-true}"
+            AFFINE_INDEXER_ENABLED: "${AFFINE_INDEXER_ENABLED:-false}"
             AFFINE_SERVER_HTTPS: "${AFFINE_SERVER_HTTPS:-true}"
             AFFINE_SERVER_HOST: "${AFFINE_SERVER_HOST:-affine.localhost}"
         # ports:
@@ -43,9 +44,10 @@ services:
         environment:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
             REDIS_SERVER_HOST: "${REDIS_SERVER_HOST:-valkey}"
+            REDIS_SERVER_USERNAME: "${REDIS_SERVER_USERNAME:-root}"
             REDIS_SERVER_PASSWORD: "${REDIS_SERVER_PASSWORD:-secret}"
             DATABASE_URL: "${DATABASE_URL:-postgresql://affine:affine@postgres:5432/affine}"
-            AFFINE_INDEXER_ENABLED: "${AFFINE_INDEXER_ENABLED:-true}"
+            AFFINE_INDEXER_ENABLED: "${AFFINE_INDEXER_ENABLED:-false}"
             AFFINE_SERVER_HTTPS: "${AFFINE_SERVER_HTTPS:-true}"
             AFFINE_SERVER_HOST: "${AFFINE_SERVER_HOST:-affine.localhost}"
         networks:
