--- a/apps/ollama/compose.yaml
+++ b/apps/ollama/compose.yaml
@@ -6,12 +6,19 @@ services:
         # user: "${UID:-1000}:${GID:-1000}"
         environment:
             TZ: "${TIMEZONE:-Europe/Warsaw}"
-        ports:
-            - ${OLLAMA_PORT:-11434}:11434
+        # ports:
+        #     - ${OLLAMA_PORT:-11434}:11434
         networks:
             main:
         volumes:
             - ollama:/root/.ollama
+        labels:
+            - "traefik.enable=true"
+            - "traefik.tcp.services.ollama.loadbalancer.server.port=11434"
+            - "traefik.tcp.routers.ollama.rule=HostSNI(`${DOMAIN:-ollama.localhost}`)"
+            - "traefik.tcp.routers.ollama.entrypoints=ollama"
+            - "traefik.tcp.routers.ollama.tls=true"
+            - "traefik.tcp.routers.ollama.service=ollama"
 
 networks:
     main:
