--- a/reverse-proxy/traefik/config/traefik.yaml
+++ b/reverse-proxy/traefik/config/traefik.yaml
@@ -31,5 +31,19 @@ entryPoints:
         #             scheme: https
     https:
         address: ":443"
-    port5173:
-        address: ":5173"
+    postgres:
+        address: ":5432"
+    mysql:
+        address: ":3306"
+    redis:
+        address: ":6379"
+    mailserver-port25:
+        address: ":25"
+    mailserver-port465:
+        address: ":465"
+    mailserver-port587:
+        address: ":587"
+    mailserver-port993:
+        address: ":993"
+    ollama:
+        address: ":11434"
