--- a/db/server/mysql/compose.yaml
+++ b/db/server/mysql/compose.yaml
@@ -18,8 +18,8 @@ services:
             - ./docker/mysql/bin/backup.sh:/bin/backup.sh:ro
             - ${BACKUP_DIR:-${HOME}/data/backups/docker/mysql}:/backup
         labels:
-            - "deck-chores.postgres.command=/bin/backup.sh"
-            - "deck-chores.postgres.cron=${BACKUP_CRON_EXPRESSION:-9,15,17,21 0 0}"
+            - 'deck-chores.postgres.command="/bin/backup.sh"'
+            - 'deck-chores.postgres.cron="${BACKUP_CRON_EXPRESSION:-9,15,17,21 0 0}"'
             - "traefik.enable=true"
             - "traefik.tcp.services.mysql.loadbalancer.server.port=3306"
             - "traefik.tcp.routers.mysql.rule=HostSNI(`${DOMAIN:-mysql.localhost}`)"
