--- a/db/server/postgres/compose.yaml
+++ b/db/server/postgres/compose.yaml
@@ -18,8 +18,8 @@ services:
             - ./docker/postgres/bin/backup.sh:/bin/backup.sh:ro
             - ${BACKUP_DIR:-${HOME}/data/backups/docker/postgres}:/backup
         labels:
-            - "deck-chores.postgres.command=/bin/backup.sh"
-            - "deck-chores.postgres.cron=${BACKUP_CRON_EXPRESSION:-9,15,17,21 0 0}"
+            - 'deck-chores.postgres.command="/bin/backup.sh"'
+            - 'deck-chores.postgres.cron="${BACKUP_CRON_EXPRESSION:-9,15,17,21 0 0}"'
             - "traefik.enable=true"
             - "traefik.tcp.services.postgres.loadbalancer.server.port=5432"
             - "traefik.tcp.routers.postgres.rule=HostSNI(`${DOMAIN:-postgres.localhost}`)"
